# Rocket_Notes

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  OpenApiSpec.yaml  README.md  Rocket.toml
openapi/: OpenApiSpec.yaml
openapi/paths/: count.yaml  note.yaml
rest/: AddNote.http  DeleteNote.http  ListNotes.http  ReadNote.http
rest/count/: GetCount.http  IncrementCount.http  IncrementCountBy.http
rest/notes/: AddNote.http  DeleteNote.http  ListNotes.http  ReadNote.http
src/: main.rs
src/api/: catcher.rs  count.rs  mod.rs  note.rs  note_api.rs
src/auth/: admin.rs
src/data/: mod.rs  note.rs  note_data.rs
src/database/: note.rs
src/manager/: count.rs  mod.rs  note.rs  note_manager.rs
src/tests/: auth.rs  count.rs  mod.rs  note.rs
