[package]
name = "rocket_notes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
pedantic = "warn"
needless_pass_by_value = "allow"
module_name_repetitions = "allow"
no_effect_underscore_binding = "allow"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }